--- a/public/stylesheets/single-article.css
+++ b/public/stylesheets/single-article.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
+body {
+    font-family: 'Playfair Display', serif;
+}
+
 body{
   box-sizing: border-box;
   font-family: Playfair Display;
@@ -18,7 +24,7 @@ body{
 
 .article__container{
   width: 90%;
-  margin: 0 auto;
+  margin: 15vh auto 0;
   flex-direction: column;
   /* border: solid 5px red; */
   max-width: 700px;
@@ -31,14 +37,19 @@ body{
   text-align: center;
   font-size: xx-large;
   font-weight: bold;
-  text-shadow: 2px 2px 2px rgba(161, 170, 169, .9);
+  /* text-shadow: 2px 2px 2px rgba(161, 170, 169, .9); */
   padding-bottom: 10px;
 }
 
 .article__user{
-  text-shadow: 2px 2px 2px rgba(105, 105, 105, .4);
+  /* text-shadow: 2px 2px 2px rgba(105, 105, 105, .4); */
   display:flex;
   align-items:flex-end;
+  font-family: sans-serif;
+}
+
+.article__user-link {
+  margin-left: 5px;
 }
 
 .article__user-link:hover{
@@ -79,6 +90,23 @@ body{
   width: 30px;
   height: 30px;
 } */
+.form__button {
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#commentBtn {
+  border: 1px solid black;
+  height: 30px;
+  padding: 4px 8px;
+  border-radius: 3px;
+}
+
+#commentBtn:hover {
+  background-color: #CB997E;
+}
 
 #like{
   margin: 0 auto;
