Connecting the create article to the profiles page

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -16,7 +16,7 @@ block content
     img(src="/images/logo-thin.png" class="logo")
     //- div(class="nav-right-container")
     a(href=`/newsfeed` class="nav-item") Home
-    a(href=`/profiles/${loggedIn}` class="nav-item") My Profile
+    a(href=`/articles/create` class="nav-item") Create an Article
     form(action="/profiles/logout" method="post")
       button(type="submit" class="nav-item") Log Out
   
