FOLLOW BUTTON WORKING WOOHOO

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -4,13 +4,18 @@ append head
   //- link(rel='stylesheet' href='/stylesheets/reset.css')
   link(rel='stylesheet' href='/stylesheets/navbar.css')
   link(rel='stylesheet' href='/stylesheets/profile.css')
+  script(type='text/javascript' src='/javascripts/followers.js' defer)
 
 block content 
   //- THIS IS THE CURRENT UNIFORM NAV BAR.
   nav(class="nav__container")
     //- div(class="nav-left-container")
     a(href=`/profiles/${user.id}` class="nav-item user-name-link")= user.pen_name
-
+    input(type='hidden' value=user.id id='authorId')
+    if follow 
+      button#followBtn(type='submit') Unfollow 
+    else 
+      button#followBtn(type='submit') Follow
     a(href=`/profiles/${user.id}/penpals` class="nav-item pen-pal-link")= `${penPalCount} Pen Pals`
     //- div(class="nav-middle-container")
     img(src="/images/logo-thin.png" class="logo")
