--- a/views/newsfeed.pug
+++ b/views/newsfeed.pug
@@ -23,5 +23,5 @@ block content
 			div(class='article__title')
 				a(class='article__title-link' href=`/articles/${article.id}`)= article.title
 			div(class='article__user') By: 
-				a(class='article__user-link' href=`/profiles/${user.id}`) #{article.User.pen_name}
+				a(class='article__user-link' href=`/profiles/${article.User.id}`) #{article.User.pen_name}
 				//- a(class='article__user-link' href=`/profiles/${user.id}`) By: #{article.User.pen_name}
