--- a/views/about-us.pug
+++ b/views/about-us.pug
@@ -19,8 +19,8 @@ block content
           .bio
             //- p.name Eunice Park 
             .developer__links
-              a.link#github(href='https://github.com/euniceparkk') Github
-              a.link#linkedin(href='https://www.linkedin.com/in/euniceparkk/') Linkedin
+              a.links#github(href='https://github.com/euniceparkk') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/euniceparkk/') Linkedin
             .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
 
       .bio__container-person
@@ -29,8 +29,8 @@ block content
           .bio 
             //- p.name Jamie Sullivan 
             .developer__links
-              a.link#github(href='https://github.com/bilbopicard') Github
-              a.link#linkedin(href='https://www.linkedin.com/in/sullivan-jamie/') Linkedin
+              a.links#github(href='https://github.com/bilbopicard') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/sullivan-jamie/') Linkedin
             .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
 
       .bio__container-person
@@ -39,8 +39,8 @@ block content
           .bio 
             //- p.name Jane Martin 
             .developer__links
-              a.link#github(href='https://github.com/jemcodes') Github
-              a.link#linkedin(href='https://www.linkedin.com/in/jemcodes/') Linkedin
+              a.links#github(href='https://github.com/jemcodes') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/jemcodes/') Linkedin
             .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
 
       .bio__container-person
@@ -49,6 +49,6 @@ block content
           .bio 
             //- p.name Patrick Nusbaum
             .developer__links
-              a.link#github(href='https://github.com/patricknuttree') Github
-              a.link#linkedin(href='https://www.linkedin.com/in/patrick-nusbaum-mpa') Linkedin
+              a.links#github(href='https://github.com/patricknuttree') Github
+              a.links#linkedin(href='https://www.linkedin.com/in/patrick-nusbaum-mpa') Linkedin
             .developer__story By re-creating the publishing platform 'Medium', we present to you Travelscape. A place where stories, adventures, and conversations are shared. In hopes to venture into the undiscovered fascinations of the world.
