--- a/views/profile.pug
+++ b/views/profile.pug
@@ -10,20 +10,22 @@ block content
   //- THIS IS THE CURRENT UNIFORM NAV BAR.
   nav(class="nav__container")
     //- div(class="nav-left-container")
-    a(href=`/profiles/${user.id}` class="nav-item user-name-link")= user.pen_name
-    input(type='hidden' value=user.id id='authorId')
-    if follow 
-      button#followBtn(type='submit') Unfollow 
-    else 
-      button#followBtn(type='submit') Follow
-    a(href=`/profiles/${user.id}/penpals` class="nav-item pen-pal-link")= `${penPalCount} Pen Pals`
+    div.leftSide
+      a(href=`/profiles/${user.id}` class="nav-item user-name-link")= user.pen_name
+      input(type='hidden' value=user.id id='authorId')
+      if follow 
+        button#followBtn(type='submit') Unfollow 
+      else 
+        button#followBtn(type='submit') Follow
+      a(href=`/profiles/${user.id}/penpals` class="nav-item pen-pal-link")= `${penPalCount} Pen Pals`
     //- div(class="nav-middle-container")
-    img(src="/images/logo-thin.png" class="logo")
+    //- img(src="/images/logo-thin.png" class="logo")
     //- div(class="nav-right-container")
-    a(href=`/newsfeed` class="nav-item") Home
-    a(href=`/articles/create` class="nav-item") Create an Article
-    form(action="/profiles/logout" method="post")
-      button(type="submit" class="nav-item") Log Out
+    div.rightSide
+      a(href=`/newsfeed` class="nav-item") Home
+      a(href=`/articles/create` class="nav-item") Create an Article
+      form(action="/profiles/logout" method="post")
+        button(type="submit" class="nav-item") Log Out
   
   div(class="main-container")
     div(class="pic-bio-container")
