--- a/views/single-article.pug
+++ b/views/single-article.pug
@@ -11,7 +11,7 @@ append head
 block content
 	nav(class="nav__container")
 		a(href=`/profiles/${user.id}` class="nav-item user-name-link")= user.pen_name
-		a(href=`#` class="nav-item pen-pal-link") About Us
+		a(href=`/about-us` class="nav-item pen-pal-link") About Us
 		img(src="/images/logo-thin.png" class="logo")
 		a(href=`/newsfeed` class="nav-item") Home
 		a(href=`/profiles/${userId}` class="nav-item") My Profile
