--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -64,9 +64,9 @@
 }
 
 #followBtn:hover {
-  /* border: 2px solid black; */
-  /* background-color: #7BA5B8;  */
-  /* border: 1px solid black; */
+  border: 2px solid black; 
+  background-color: #7BA5B8; 
+  border: 1px solid black;
 }
 
 
