--- a/public/stylesheets/newsfeed.css
+++ b/public/stylesheets/newsfeed.css
@@ -18,54 +18,57 @@ body{
 .article__title-link{
   padding-top: 5px;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: bold;
   /* text-shadow: 1px 1px 1px rgba(161, 170, 169, .9); */
   padding-bottom: 5px;
   display: flex;
   justify-content: flex-start;
   text-decoration: none;
+  color: rgba(0,0,0, .75);
 }
 
 .article__title-link:hover{
-  color: royalblue;
+  color: #6B7967;
 }
 
 .article__user-link,
 .article__user
 {
   font-family: sans-serif;
-  /* font-size: 1.1rem; */
+  color: rgba(0,0,0,.8);
+  font-size: 1.1rem;
   /* text-shadow: 1px 1px 1px rgba(105, 105, 105, .4); */
   /* text-decoration: none; */
 } 
 
 .article__user-link:hover{
-  color: royalblue
+  color: #6B7967;
 }
 
-.article__container{
-  border: red;
+.single-article-div{
+  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
-
+.border-bottom {
+  margin: 30px auto 0;
+  width: 60%;
+  border-bottom: 1px solid rgba(123,165,184,1);
+}
 .article__container-image{
   max-width: 750px;
-	margin-top: 10px;
-  padding-top: 50px;
-  /* box-shadow: 2px 2px; */
 }
-
-/* .article__container-image:hover{
-  background-image: ;
-  height: 70px;
-  width: 120px; 
-  NOT COMPLETE
- 
-} */
 
 #articleImg{
   max-width: 100%;
   max-height: 100%;
   margin: 0 auto;
   display: block;
+  /* border-radius: 10px; */
+  box-shadow: 4px 4px 4px 0px rgba(0,0,0, 0.6);
+  transition: all .5s ease-in;
+}
+
+#articleImg:focus {
+  transform: scale(0.8);
 }
