Bug fixing from the branch merge

--- a/views/profile.pug
+++ b/views/profile.pug
@@ -21,7 +21,7 @@ block content
           button#followBtn(type='submit') Follow
       a(href=`/profiles/${user.id}/penpals` class="nav-item pen-pal-link")= `${penPalCount} Pen Pals`
     //- div(class="nav-middle-container")
-    //- img(src="/images/logo-thin.png" class="logo")
+    img(src="/images/logo-thin.png" class="logo")
     //- div(class="nav-right-container")
     div.rightSide
       a(href=`/newsfeed` class="nav-item") Home
