--- a/public/stylesheets/newsfeed.css
+++ b/public/stylesheets/newsfeed.css
@@ -3,7 +3,8 @@
 body{
   box-sizing: border-box;
   font-family: 'Playfair Display', serif;
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
+  
 }
 
 .article__container-newsfeed{
@@ -17,19 +18,23 @@ body{
 
 .article__title-link{
   padding-top: 5px;
-  text-align: center;
   font-size: 2rem;
   font-weight: bold;
-  /* text-shadow: 1px 1px 1px rgba(161, 170, 169, .9); */
   padding-bottom: 5px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   text-decoration: none;
-  color: rgba(0,0,0, .75);
+  color: rgba(0,0,0,.8);
+  /* transition: color .5s ease-in; */
 }
 
-.article__title-link:hover{
-  color: #6B7967;
+.article__title-link p {
+  display: inline-block;
+  margin: 0;
+  /* text-align: center; */
+}
+.article__title-link p:hover{
+  text-decoration: underline;
 }
 
 .article__user-link,
@@ -41,6 +46,15 @@ body{
   /* text-shadow: 1px 1px 1px rgba(105, 105, 105, .4); */
   /* text-decoration: none; */
 } 
+
+.article__user {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.article__user-link p {
+  margin: 0 0 0 5px;
+}
 
 .article__user-link:hover{
   color: #6B7967;
@@ -62,13 +76,13 @@ body{
 #articleImg{
   max-width: 100%;
   max-height: 100%;
-  margin: 0 auto;
+  margin: 0 auto 10px;
   display: block;
   /* border-radius: 10px; */
-  box-shadow: 4px 4px 4px 0px rgba(0,0,0, 0.6);
-  transition: all .5s ease-in;
+  transition: all .25s linear;
 }
 
-#articleImg:focus {
-  transform: scale(0.8);
+#articleImg:hover {
+  transform: scale(1.01);
+  box-shadow: 5px 5px 5px 0px rgba(0,0,0, 0.6);
 }
