--- a/views/newsfeed.pug
+++ b/views/newsfeed.pug
@@ -23,8 +23,10 @@ block content
 					a(article__container-image-link href=`/articles/${article.id}`)
 						img#articleImg(src=article.imageSrc)
 				div(class='article__title')
-					a(class='article__title-link' href=`/articles/${article.id}`)= article.title
+					a(class='article__title-link' href=`/articles/${article.id}`)
+						p= article.title
 				div(class='article__user') By: 
-					a(class='article__user-link' href=`/profiles/${article.User.id}`) #{article.User.pen_name}
+					a(class='article__user-link' href=`/profiles/${article.User.id}`) 
+						p= article.User.pen_name
 				div(class="border-bottom")
 	include footer.pug
