--- a/public/stylesheets/newsfeed.css
+++ b/public/stylesheets/newsfeed.css
@@ -8,33 +8,31 @@ body{
 }
 
 .article__container-newsfeed{
-  width: 90%;
+  width: 60%;
   margin: 15vh auto 0;
   flex-direction: column;
-  max-width: 700px;
+  /* max-width: 700px; */
   justify-content: center;
   padding: 30px;
+  /* border: 2px solid blue; */
 }
 
-.article__title-link{
-  padding-top: 5px;
-  font-size: 2rem;
-  font-weight: bold;
-  padding-bottom: 5px;
-  display: flex;
-  justify-content: center;
-  text-decoration: none;
+.article__title-p {
+  text-align: center;
+  /* border: 1px solid red; */
+  /* padding-top: 5px;
+  padding-bottom: 5px; */
+}
+.article__title-link {
+  /* border: 1px solid green; */
+  font-size: 2.4rem;
   color: rgba(0,0,0,.8);
-  /* transition: color .5s ease-in; */
+  text-decoration: none;
 }
 
-.article__title-link p {
-  display: inline-block;
-  margin: 0;
-  /* text-align: center; */
-}
-.article__title-link p:hover{
-  text-decoration: underline;
+.article__title-link:hover{
+  font-weight: bold;
+  /* text-decoration: underline; */
 }
 
 .article__user-link,
@@ -43,22 +41,21 @@ body{
   font-family: sans-serif;
   color: rgba(0,0,0,.8);
   font-size: 1.1rem;
-  /* text-shadow: 1px 1px 1px rgba(105, 105, 105, .4); */
-  /* text-decoration: none; */
 } 
 
 .article__user {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .article__user-link p {
   margin: 0 0 0 5px;
 }
 
-.article__user-link:hover{
-  color: #6B7967;
-}
+
+/* .article__user-link:hover{
+  text-decoration: none;
+} */
 
 .single-article-div{
   padding-bottom: 20px;
@@ -66,20 +63,23 @@ body{
 }
 .border-bottom {
   margin: 30px auto 0;
-  width: 60%;
-  border-bottom: 1px solid rgba(123,165,184,1);
+  width: 100%;
+  border-bottom: 1px solid rgba(123,165,184,0.5);
 }
 .article__container-image{
-  max-width: 750px;
+  /* border: 1px solid green; */
+  max-width: 650px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #articleImg{
   max-width: 100%;
   max-height: 100%;
-  margin: 0 auto 10px;
+  /* margin: 0 auto 10px; */
   display: block;
-  /* border-radius: 10px; */
   transition: all .25s linear;
+  /* border: 1px solid red; */
 }
 
 #articleImg:hover {
