--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -21,5 +21,5 @@ block content
 					+field('Confirm Password', 'confirmPassword', '', 'password')
 					div(id="sign-up-btn-container")
 						button(type='submit' id="sign-up-btn") Hit the Road!
-						a(href='/newsfeed' id="sign-up-cancel") Cancel
+						a(href='/' id="sign-up-cancel") Cancel
 						a(href='/users/login' id="log-in-redirect") Already have an account? Log in here.
