--- a/views/log-in.pug
+++ b/views/log-in.pug
@@ -18,6 +18,5 @@ block content
 				+field('Email Address', 'email', email)
 				+field('Password', 'password', null, 'password')
 				div(id="log-in-btn-container")
-					button(type='submit' id="log-in-btn") Welcome Home
-					a()
+					button(type='submit' id="log-in-btn") Welcome Home!
 					a(href='/users/signup' id="sign-up-link") Don't have an account? Sign up here.
