--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 .nav__container {
   background-color: #cb997e;
