--- a/public/stylesheets/penpals.css
+++ b/public/stylesheets/penpals.css
@@ -3,16 +3,6 @@
 body {
     font-family: 'Playfair Display', serif;
     background-color: #F7F7F7; 
-    /* background-image: url("https://unsplash.com/photos/HoevDVvxInw");  */
-    /* background-color: #7CA5B8; */
-    /* background-position: top center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    /* background-color: #F7F7F7; */
-    /* display: flex;
-    flex-direction: row;
-    justify-content: center;  */
 } 
 #pen-pals-h1 {
     color: rgba(0,0,0,.5);
@@ -43,8 +33,7 @@ body {
     border: 1px solid rgba(0,0,0,.5);
     box-sizing: border-box;
     width: 300px;
-    /* max-width: 300px; */
-    height: 150px;
+    height: 30px;
     margin:0px 0px 10px 0px;
     display: flex;
     justify-content: center;
@@ -52,47 +41,21 @@ body {
     background-color: #FFF3EB;
     transition: all .35s ease-in;
     text-decoration: none;
-    border-radius: 7px;
-    /* box-shadow: 10px 3px 3px 3px rgba(203, 153, 126, 0.5) ; */
-    /* flex-wrap: nowrap; */   
+    border-radius: 7px; 
 }
 
 .pen-pal-links:hover{
     background-color: rgba(203, 153, 126, .5);
 }
 
-/* .mini-logo-container{
-    border: 3px solid red;
-    box-sizing: border-box;
-
-}
-
-.pen-pal-logo {
-    height: 100px;
-    width: 100px;
-} */
-
-/* .footer{
-    height: 100px;
-    position:fixed;
-    background-color: #CB997E;
-    
-} */
-
 .pen-pal-list-container {
     list-style-type: none;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-
-
+    /* border: 1px solid red; */
+    overflow-y: scroll;
 }
-/* .user-article-container {
-    padding-top: 50px;
-    background-color: #F7F7F7;
-    border: 5px solid red;
-} */
 
 
 
