--- a/public/stylesheets/create-article-navbar.css
+++ b/public/stylesheets/create-article-navbar.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 .nav__container {
   background-color: #CB997E;
   display: flex;
