--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 body {
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display', serif;
   font-size: 12px;
   background-color: #F7F7F7;
 }
@@ -35,7 +35,7 @@ input {
   border: solid 1px #707070;
   margin: 10px auto 10px auto;
   padding: 10px;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   font-size: 20px;
   font-weight: bold;
   text-align: left;
@@ -51,7 +51,7 @@ outline: 3px solid rgb(170, 188, 216);
   padding: 20px 0 0 10px;
   width: 100%;
   height: 50vh;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   font-size: 15px;
   text-align: left;
   overflow: scroll;
@@ -64,7 +64,7 @@ outline: 3px solid rgb(170, 188, 216);
 #imageSrc {
   border: solid 1px #707070;
   /* margin: 20px 40px 10px 40px; */
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   padding: 10px;
   margin-bottom: 20px;
   font-size: 15px;
@@ -84,7 +84,7 @@ outline: 3px solid rgb(170, 188, 216);
   padding: 7px 0px;
   border: 1px solid rgba(0, 0, 0, .5);
   border-radius: 12px;
-  font-family: "Playfair Display";
+  font-family: 'Playfair Display', serif;
   color: rgba(0, 0, 0, .75);
   background-color: #D3CACA;
   font-size: 20px;
