--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 .footer-container{
   box-shadow: -3px 0px 3px 2px rgba(0, 0, 0, .5);
