--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -19,10 +19,7 @@ body {
     background-color: #7ca5b86e;
     display: flex;
     justify-content: center;
-    border-right: 2px solid black;
-    /* border-top: 2px solid black; */
-    /* max-width: 200px; */
-    /* border: 5px solid red; */
+    border-right: 1px solid black;
 }
 .author-info-list {
     display: flex;
@@ -43,18 +40,6 @@ body {
     /* border: 5px solid red; */
 }
 
-.article-div {
-    border-bottom: 2px solid red;
-}
-/* THIS IS INSIDE THE NAVBAR.CSS */
-/* .leftSide{
-    display: flex;
-}
-
-.rightSide{
-    display: flex;
-} */
-
 .user-article-container ul {
     display: flex;
     flex-direction: column;
@@ -73,7 +58,7 @@ body {
     font-size: 2rem;
     font-weight: bold;
     text-decoration: none;
-    transition: all .2s ease-in-out;
+    transition: color .2s ease-in-out;
 }
 
 .article-title:hover {
