--- a/public/stylesheets/sign-up.css
+++ b/public/stylesheets/sign-up.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 body {
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   font-size: 12px;
   background-color: #F7F7F7;
 }
@@ -48,7 +49,7 @@ input {
   margin: 5px 0 10px 0;
   padding: 5px;
   color: #433C3C;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   font-size: 14px;
   text-align: left;
 }
@@ -62,7 +63,7 @@ outline: 3px solid rgb(170, 188, 216);
   margin: 5px 0 10px 0;
   padding: 5px;
   color: #433C3C;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   font-size: 14px;
   text-align: left;
 }
@@ -76,7 +77,7 @@ outline: 3px solid rgb(170, 188, 216);
   margin: 5px 0 10px 0;
   padding: 5px;
   color: #433C3C;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   font-size: 14px;
   text-align: left;
 }
@@ -100,7 +101,7 @@ outline: 3px solid rgb(170, 188, 216);
 }
 
 #sign-up-btn-container {
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   /* border: solid 3px red; */
   margin: 10px 0 10px 0;
   display: flex;
@@ -112,7 +113,7 @@ outline: 3px solid rgb(170, 188, 216);
 #sign-up-btn {
   margin: 5px 15px 0 10px;
   width: 50%;
-  font-family: Playfair Display;
+  font-family: 'Playfair Display', serif;
   background-color: #CB997E;
 }
 
